========================
0.0.4
========================

- improved `Number.pluralize()` method
- added `PROMISIFY(fn, [a], [b])` method
- added `$.promisify(fn, [a], [b])` method
- added `FILESTORAGE().copy(id, path, [callback(err, meta)])`
- fixed formatting `0` number in the `Tangular.format` helper
- improved `$.invalid()` method, now it returns `ErrorBuilder`

========================
0.0.3
========================

- extended icon validator by adding support for `tic` keyword
- added new events `ON('request')`, `ON('controller')` and `ON('websocket')`
- fixed applying the `$insecure` option in the FlowStream
- fixed routing for unexpected content-type
- added `controller.authorize([callback])` method
- improved `translate` command in `total5` command-line tool
- fixed link generator for email and phone numbers in `Markdown`
- fixed auto-restarting app in the `debug` mode with bundles
- fixed global settings for JS/CSS/HTML minificator
- improved merging files
- fixed middleware with `_` underscore character in routes
- fixed `CORS()` method
- improved `CORS` checker
- added support for inheriting inline schemas in the form e.g. `id:String,@address,@products`
- added `ctrl.image(opt)` method
- extended `ctrl.filefs()` method by returing `opt` object
- extended `QueryBuilder.userid()` by supporting `$` options/controller instance
- added `controller.action()`
- improved `controller.authorize()` it assigns `controller.user` automatically

========================
0.0.2
========================

- first release