@@ -8,6 +8,7 @@
 - added `FILESTORAGE().copy(id, path, [callback(err, meta)])`
 - fixed formatting `0` number in the `Tangular.format` helper
 - improved `$.invalid()` method, now it returns `ErrorBuilder`
+- improved `$.callback()`, it accepts another instance of `$`
 
 ========================
 0.0.3
